<resources>
    <string name="app_name">Guia Turistica</string>
    <string name="category_item1">Gastronomia</string>
    <string name="category_item2">Sitios Arqueologicos</string>
    <string name="category_item3">Ciudades</string>
    <string name="category_item4">Montañas</string>
    <string name="category_item5">Playas</string>


    <string-array name="place01">
        <item>1</item>
        <item>Tinku</item>
        <item>La mejor comida peruana en El Salvador!!</item>
        <item>2223 3700</item>
        <item>https://www.tinku.com</item>
        <item>13.6905631</item>
        <item>-89.2415602</item>
        <item>@drawable/logo_tinku</item>
        <item>@drawable/tiku_restaurante</item>
    </string-array>

    <string-array name="place02">
        <item>1</item>
        <item>La Casa del Casador</item>
        <item>Una increíble opción para disfrutar de la comida alemana en toda su esencia. Una amplia carta de carnes, vinos, licores y sobre todo lo más importante: Cervezas! </item>
        <item>2263 8778</item>
        <item>http://www.casadelcazador.net</item>
        <item>13.7016863</item>
        <item>-89.250623</item>
        <item>@drawable/casa_casador_logo</item>
        <item>@drawable/casa_casador</item>
    </string-array>

    <string-array name="place03">
        <item>1</item>
        <item>Dennys</item>
        <item>
        Que el menu este disponible las 24horas es de lo mejor! Un sabor peculiar y exquisito! Sin duda alguna se merece mas de 5 estrellas! Lo recomiendo 100%! Es accesible, precio justo y siempre pero siempre tienen postres! Fav's!!
        </item>
        <item>2223 3700</item>
        <item>https://www.dennys.com</item>
        <item>13.6905631</item>
        <item>-89.2415602</item>
        <item>@drawable/dennys</item>
        <item>@drawable/dennys_outside</item>
    </string-array>

    <string-array name="place04">
        <item>1</item>
        <item>Oye Chico</item>
        <item>
Comida cubana en El Salvador. Instalaciones cómodas, comida muy buena, precios accesibles. Servicio de personal muy bueno. Les recomiendo los tostones y los mojitos.        </item>
        <item>2223 3700</item>
        <item>https://www.oyechico.com</item>
        <item>13.6905631</item>
        <item>-89.2415602</item>
        <item>@drawable/oye_chico</item>
        <item>@drawable/oye_chico_truck</item>
    </string-array>


    <string-array name="place05">
        <item>1</item>
        <item>Picasso Stone Flame Oven</item>
        <item>
        Agradable ambiente, pizzas de combinaciones inusuales pero sabrosas: langosta, almejas, camarones; arugula y alcachofas, queso azul. Buenos precios y amable atencion.
        </item>
        <item>2223 3700</item>
        <item>https://www.piccaso.com</item>
        <item>13.6905631</item>
        <item>-89.2415602</item>
        <item>@drawable/picaso</item>
        <item>@drawable/picaso_photo</item>
    </string-array>

    <string-array name="place06">
        <item>1</item>
        <item>Tucson steak houses</item>
        <item>
            La experiencia de sabor, atención y calidad más inn de La Gran Vía inició sus operaciones el 16 de Enero de 2006 en El Salvador, somos una franquicia de Tucson Argentina.
        </item>
        <item>2223 3700</item>
        <item>https://www.tucsonstakehouse.com</item>
        <item>13.6905631</item>
        <item>-89.2415602</item>
        <item>@drawable/tucson_logo</item>
        <item>@drawable/tucson_restaurante</item>
    </string-array>


    <string-array name="place07">
        <item>1</item>
        <item>El Parce</item>
        <item>
            Foodtruck con influencia Colombiana rodando sobre El Salvador
        </item>
        <item>2223 3700</item>
        <item>https://www.elparce.com</item>
        <item>13.6905631</item>
        <item>-89.2415602</item>
        <item>@drawable/el_parce</item>
        <item>@drawable/el_parce_truck</item>
    </string-array>


    <string-array name="place08">
        <item>1</item>
        <item>Le Poutine</item>
        <item>
        Plato tradicional de Quebec, Canada. A base de papa frita.
        </item>
        <item>2223 3700</item>
        <item>https://www.lepoutine.com</item>
        <item>13.6905631</item>
        <item>-89.2415602</item>
        <item>@drawable/le_poutine</item>
        <item>@drawable/le_poutine_restaurant</item>
    </string-array>


    <string-array name="place09">
        <item>2</item>
        <item>Joya de Cere</item>
        <item>
            Joya de Cere	Joya de Cerén es un sitio precolombino de El Salvador situado en las proximidades de San Juan Opico y Las Flores, en el departamento de La Libertad, en la región centroccidental de El Salvador.        </item>
        <item>2223 3700</item>
        <item>https://www.oyechico.com</item>
        <item>13.6905631</item>
        <item>-89.2415602</item>
        <item>@drawable/picaso</item>
        <item>@drawable/picaso_photo</item>
    </string-array>


    <string-array name="Places">
        <item>@array/place01</item>
        <item>@array/place02</item>
        <item>@array/place03</item>
        <item>@array/place04</item>
        <item>@array/place05</item>
        <item>@array/place06</item>
        <item>@array/place07</item>
        <item>@array/place08</item>
        <item>@array/place09</item>
    </string-array>

</resources>
