<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_food"
            android:color="@color/colorPrimary"
            android:icon="@drawable/ic_icons8_food"
            android:state_checked="true"
            android:title="@string/category_item1" />
        <item
            android:id="@+id/nav_archaeology"
            android:color="@color/colorPrimary"
            android:icon="@drawable/ic_icons8_archaeology"
            android:state_checked="false"
            android:title="@string/category_item2" />
        <item
            android:id="@+id/nav_city"
            android:color="@color/colorPrimary"
            android:icon="@drawable/ic_icons8_city"
            android:state_checked="false"
            android:title="@string/category_item3" />
        <item
            android:id="@+id/nav_mountain"
            android:color="@color/colorPrimary"
            android:icon="@drawable/ic_icons8_mountain"
            android:state_checked="false"
            android:title="@string/category_item4" />
        <item
            android:id="@+id/nav_beach"
            android:icon="@drawable/ic_icons8_beach"
            android:state_checked="false"
            android:title="@string/category_item5" />
    </group>
</menu>